--- a/styles/main.css
+++ b/styles/main.css
@@ -125,9 +125,19 @@ h1 {
 }
 
 video {
-  display: block;
-  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: auto;
+  max-width: 80%;
   height: auto;
+  border-radius: 5rem;
 }
 
 h3 {
