Config imagenes con border radius

--- a/scss/_historia.scss
+++ b/scss/_historia.scss
@@ -22,8 +22,9 @@
     justify-content: center;
 
     .imgHistResponsive{
-        max-width: 70%;
+        max-width: 85%;
         height: 70%;
+        border-radius: 2em;
     }
 
 }
