--- a/scss/_404.scss
+++ b/scss/_404.scss
@@ -1,9 +1,5 @@
-
-#mainT{
-    transition: all 0.6s;
-    display: table;
-    width: 100%;
-    height: 100vh;
-    text-align: center;
+#imgh3{
+    background: url(https://i.pinimg.com/564x/f6/6c/f4/f66cf4eaf8b1501d9d5ca727c32bc89b.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
 }
-
