--- a/scss/_404.scss
+++ b/scss/_404.scss
@@ -1,5 +1,7 @@
-#imgh3{
-    background: url(https://i.pinimg.com/564x/f6/6c/f4/f66cf4eaf8b1501d9d5ca727c32bc89b.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
+.img404{
+    background-image: url(https://i.pinimg.com/originals/01/2f/04/012f0469e9ad77b46e4d578425a508a8.jpg);
+    border-radius: 3em;
+}
+body{
+    background-color: red;
 }
