--- a/scss/_404.scss
+++ b/scss/_404.scss
@@ -1,7 +1,5 @@
 .img404{
-    background-image: url(https://i.pinimg.com/originals/01/2f/04/012f0469e9ad77b46e4d578425a508a8.jpg);
-    border-radius: 3em;
-}
-body{
-    background-color: red;
-}
+    background-image: url(https://images4.alphacoders.com/222/thumb-1920-222138.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+  }
